--- a/public/styles.css
+++ b/public/styles.css
@@ -6,14 +6,88 @@
 
 body {
   font-family: Verdana, Tahoma, sans-serif;
+  background: #8dab7f;
 }
 
 header h1 {
   margin: 1rem;
   text-align: center;
+  color: yellow;
 }
 
 #app {
   width: 60%;
   margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.url-created {
+  text-align: center;
+}
+
+.url-created p {
+  color: #481620;
+}
+
+#url,
+#slug {
+  background: white;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: black;
+  text-align: center;
+  font-size: 20px;
+  width: 350px;
+  outline: none;
+  height: 60px;
+  margin-top: 10px;
+}
+
+#url {
+  margin-top: 20px;
+}
+
+::placeholder {
+  color: gray;
+  text-align: center;
+  font-size: 20px;
+}
+
+.container button {
+  width: 350px;
+  height: 60px;
+  background: #f29e4c;
+  outline: none;
+  margin-top: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.error h3 {
+  font-size: 15px;
+  margin-top: 50px;
+  color: #f3efe0;
+}
+
+.created {
+  visibility: visible;
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.created-hid {
+  visibility: hidden;
+}
+
+#copy-but {
+  width: 100px;
+  height: 25px;
 }
